Fixed alignment issues in comment form

--- a/src/Component/styles/CommentForm.css
+++ b/src/Component/styles/CommentForm.css
@@ -3,6 +3,8 @@
     background-color: white;
     height: 3em;
     overflow-y: auto;
+    text-align: left;
+    align-items: left;
   }
 
 form.DraftEditor-root {
